--- a/src/views/apply.pug
+++ b/src/views/apply.pug
@@ -197,10 +197,10 @@ block main
                             label.form-check-label(for='defaultCheck14')
                                 | My school does not offer majors / primary areas of study
                         .form-check
-                            label
-                                input#other(type='checkbox', name='interest', value='other', onclick=`clicky()`)
-                                |             Other
-                            input#otherValue(type='text', name='other', aria-label='Other interest', style='visibility:hidden')
+                            label.form-check-label
+                                input#other.form-check-input(type='checkbox', name='interest', value='other', onclick=`clicky()`)
+                                | Other (please specify)
+                            input#otherValue.form-check-input(type='text', name='other', aria-label='Other interest', style='visibility:hidden')
 
                         .form-check
                             input#defaultCheck15.form-check-input(type='checkbox', value='Prefer not to answer', name='major', checked)
