--- a/src/public/stylesheets/welcome_page.css
+++ b/src/public/stylesheets/welcome_page.css
@@ -442,7 +442,7 @@ td, tr {
 }
 */
 @media (max-width: 1400px) {
-    #spriteContainer, .planet, .alien {
+    .alien {
         display: none;
     }
 }
