Text to number input type

--- a/src/views/event_applications_summary.pug
+++ b/src/views/event_applications_summary.pug
@@ -2,7 +2,7 @@ extends includes/dashboard_bar
 
 block main
 
-    h1.m-2 Event Applications Summary
+    .display-5.m-2 Event Applications Summary
 
     .container-sm.overflow-x-scroll.mt-3.p-3
 
