--- a/src/views/hardware_items_available.pug
+++ b/src/views/hardware_items_available.pug
@@ -2,7 +2,7 @@ extends includes/dashboard_bar
 
 block main
 
-    h1.m-2 Available Hardware
+    .display-5.m-2 Available Hardware
     .d-flex.justify-content-around
         a.btn.btn-secondary.m-1(href='/dashboard/hardware_items')
             | Back to all
