Hardware items check

--- a/src/views/hardware_items.pug
+++ b/src/views/hardware_items.pug
@@ -85,7 +85,7 @@ block main
                         each hardware of hardware_items
                             tr
                                 th(scope='row')
-                                    input#checkboxNoLabel.form-check-input(type='checkbox', value=event_application[0], name='hardwareItems')
+                                    input#checkboxNoLabel.form-check-input(type='checkbox', value=hardware[0], name='hardwareItems')
                                 td= hardware[1]
                                 td= hardware[2]
                                 td= hardware[3]
