--- a/src/views/hardware_items.pug
+++ b/src/views/hardware_items.pug
@@ -75,6 +75,7 @@ block main
         table.table.table-striped.table-bordered.my-4#myTable
             thead
                 tr
+                    th(scope='col')
                     th(scope='col') Name
                     th(scope='col') Link
                     th(scope='col') Category
