--- a/src/views/event_applications.pug
+++ b/src/views/event_applications.pug
@@ -47,7 +47,7 @@ block main
                             td
                                 a(href= '/dashboard/event_applications/' + event_application[0])= event_application[0]
                             td= event_application[1]
-                            td= event_application[4]
+                            //td= event_application[4]
                             td= event_application[5]
                             td= event_application[6]
                             td= event_application[7]
@@ -63,3 +63,4 @@ block main
                             td= event_application[17]
                             td= event_application[18]
                             td= event_application[19]
+                            td= event_application[20]
