--- a/src/views/event_applications.pug
+++ b/src/views/event_applications.pug
@@ -46,7 +46,10 @@ block main
                         tr
                             td
                                 a(href= '/dashboard/event_applications/' + event_application[0])= event_application[0]
-                            
+
+                            td= event_application[4]
+                            td= event_application[5]
+
                             td= event_application[6]
                             td= event_application[7]
                             td= event_application[8]
