--- a/src/views/event_applications.pug
+++ b/src/views/event_applications.pug
@@ -47,7 +47,7 @@ block main
                             td
                                 a(href= '/dashboard/event_applications/' + event_application[0])= event_application[0]
 
-                            td= event_application[4]
+                            //td= event_application[4]
                             td= event_application[5]
 
                             td= event_application[6]
