--- a/src/views/application.pug
+++ b/src/views/application.pug
@@ -5,6 +5,12 @@ block main
 
         if (userRoles.includes('Attendee'))
 
+            
+
+            if(data.includes('pending'))
+                p the status is pending
+
+
 
 
 
