--- a/src/views/application.pug
+++ b/src/views/application.pug
@@ -5,12 +5,10 @@ block main
 
         if (userRoles.includes('Attendee'))
 
-            
 
-            if(data.includes('pending'))
+
+            if(data.status === 'pending')
                 p the status is pending
-
-
 
 
 
