--- a/src/views/application.pug
+++ b/src/views/application.pug
@@ -7,7 +7,7 @@ block main
 
 
 
-            if(data.status === 'pending')
+            if(data[0][7] === 'pending')
                 p the status is pending
 
 
