--- a/src/views/application.pug
+++ b/src/views/application.pug
@@ -27,7 +27,7 @@ block main
                     // TODO: make phone type
                     .col-lg-8.m-3
                         label.form-label(for='phone') Phone:
-                        input#phone.form-control(type='tel', pattern='[0-9]{3}-[0-9]{3}-[0-9]{4}', required)
+                        input#phone.form-control(type='tel', required)
                         .invalid-feedback
                             | Please enter your phone number
 
