--- a/src/views/includes/dashboard_bar.pug
+++ b/src/views/includes/dashboard_bar.pug
@@ -37,7 +37,7 @@ block nav
             li.nav-item
                 a.nav-link(aria-current='page', href='/dashboard') Dashboard Home
             li.nav-item
-                a.nav-link(href='/dashboard/apply') My Application
+                a.nav-link(href='/dashboard/events/ycp-hacks-2023/application') My Applications
             li.nav-item
                 a.nav-link(href='/') Back to Main Site
             if(isAuthenticated)
