--- a/src/views/application.pug
+++ b/src/views/application.pug
@@ -13,18 +13,24 @@ block main
                         hr
 
                     .col-lg-8.m-3
-                        label.form-label(for='firstName') First Name:
-                        input#firstName.form-control(type='value', required)
+                        label.form-label(for='email') Email:
+                        input#email.form-control(type='value', required)
                         .invalid-feedback
-                            | Please enter your first name
+                            | Please enter your Email
 
-                    .col-lg-8.m-3
-                        label.form-label(for='lastName') Last Name:
-                        input#lastName.form-control(type='value', required)
-                        .invalid-feedback
-                            | Please enter your last name
 
-                    // TODO: make phone type
+                    //.col-lg-8.m-3
+                    //    label.form-label(for='firstName') First Name:
+                    //    input#firstName.form-control(type='value', required)
+                    //    .invalid-feedback
+                    //        | Please enter your first name
+                    //
+                    //.col-lg-8.m-3
+                    //    label.form-label(for='lastName') Last Name:
+                    //    input#lastName.form-control(type='value', required)
+                    //    .invalid-feedback
+                    //        | Please enter your last name
+                    //
                     .col-lg-8.m-3
                         label.form-label(for='phone') Phone:
                         input#phone.form-control(type='tel', required)
@@ -278,12 +284,12 @@ block main
                     //    input#fileinput.form-control(onchange="validateSize(this)" type='file' accept='.pdf' required='')
                     .col-lg-8.m-3
                         label.form-label(for='github') Github
-                        input#github(type="url" class='form-control' placeholder='Github' pattern=".*\.github\..*", name='github', required, value=data[0][21])
+                        input#github(type="url" class='form-control' placeholder='Github' pattern=".*\.github.com\..*", name='github', required, value=data[0][21])
                         .invalid-feedback
                             | Ensure this is a Github link
                     .col-lg-8.m-3
                         label.form-label(for='linkedin') LinkedIn
-                        input#linkedin(type="url" class='form-control' placeholder='LinkedIn' pattern=".*\.linkedin\..*", name='linkedin', required, value=data[0][21])
+                        input#linkedin(type="url" class='form-control' placeholder='LinkedIn' pattern=".*\.linkedin.com\..*", name='linkedin', required, value=data[0][21])
                         .invalid-feedback
                             | Ensure this is a Linkedin link
 
