--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -54,8 +54,9 @@ block main
                         hr
                         p.card-text
                             p Yay!! Looks like we got your application
-                            p.
-                                If there is anything you would like to change in your application, head to the My Application tab and change what you want!
+                            p If there is anything you would like to change in your application, head to the &nbsp;
+                                strong My Application tab &nbsp;
+                                |and change what you want!
                             p.
                                 We will send a notification whenever there have been updates to your application! :)
 
