--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -58,7 +58,7 @@ block main
                                 strong My Application tab &nbsp;
                                 |and change what you want!
                             p.
-                                We will send a notification whenever there have been updates to your application! :)
+                                We will send a notification whenever there have been updates to your application! 😀
 
     else
         .row.row-cols-1.row-cols-md-1.g-0.m-3.text-center.justify-content-center
