--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -48,14 +48,14 @@ block main
         .row.row-cols-1.row-cols-md-3.g-0.m-3.text-center.justify-content-center
             // -- Submitted Application
             .col
-                .card.m-1
+                .card.m-1.p-2
                     .card-body
                         h2.card-title Hey, Attendee!
                         hr
                         p.card-text
                             p Yay!! Looks like we got your application
-                            p If there is anything you would like to change in your application, head to the &nbsp;
-                                strong My Application tab &nbsp;
+                            p If there is anything you would like to change in your application, head to the
+                                strong My Application tab
                                 |and change what you want!
                             p.
                                 We will send a notification whenever there have been updates to your application! 😀
@@ -64,7 +64,7 @@ block main
         .row.row-cols-1.row-cols-md-1.g-0.m-3.text-center.justify-content-center
             // -- If no application
             .col-md-6
-                .card.m-1
+                .card.m-1.p-2
                     .card-body
                         h2.card-title Check In
                         hr
@@ -79,7 +79,7 @@ block main
             // -- Submitted
 
             //.col
-            //    .card.m-1
+            //    .card.m-1.p-2
             //        .card-body
             //            h2.card-title Hey, Attendee!
             //            hr
@@ -93,7 +93,7 @@ block main
             // -- Accepted
 
             //.col
-            //    .card.m-1
+            //    .card.m-1.p-2
             //        .card-body
             //            h2.card-title Hey, Attendee!!
             //            hr
@@ -105,7 +105,7 @@ block main
 
             // - RSVP-ed
             //.col
-            //    .card.m-1
+            //    .card.m-1.p-2
             //        .card-body
             //            h2.card-title Upcoming Events
             //            hr
@@ -124,7 +124,7 @@ block main
             //                            td 12:00
             //            a.btn.btn-secondary(href='#') View All
             //.col
-            //    .card.m-1
+            //    .card.m-1.p-2
             //        .card-body
             //            h2.card-title Discord Channel
             //            hr
