--- a/src/views/gallery.pug
+++ b/src/views/gallery.pug
@@ -8,20 +8,21 @@ block main
     h1.ycpHeader.my-3.display-4.backgroundBlend Image Gallery
     .d-flex.justify-content-center
         .container.m-0
+            // -- May want to change alt text in future
             .row.m-0
                 .col-md-6
-                    img.img.m-3(src='/static/images/TeamFocused.png', alt='hacks_four')
+                    img.img.m-3(src='/static/images/TeamFocused.png', alt='Team working throughout event')
                 .col-md-6
-                    img.img.m-3(src='/static/images/Presentation.png', alt='hacks_five')
+                    img.img.m-3(src='/static/images/Presentation.png', alt='Attendees listening in on presentation')
             .row.m-0
                 .col-md-4
-                    img.img.m-3(src='/static/images/Drone.png', alt='hacks_six')
+                    img.img.m-3(src='/static/images/Drone.png', alt='Photo of drone')
                 .col-md-4
-                    img.img.m-3(src='/static/images/Hardware.png', alt='hacks_one')
+                    img.img.m-3(src='/static/images/Hardware.png', alt='Hardware Image')
                 .col-md-4
-                    img.img.m-3(src='/static/images/pic1.png', alt='hacks_two')
+                    img.img.m-3(src='/static/images/pic5.png', alt='Attendees')
             .row.m-0
                 .col-md-4
-                    img.img.m-3(src='/static/images/TylerEating.png', alt='hacks_two')
+                    img.img.m-3(src='/static/images/TylerEating.png', alt='Breakfast')
                 .col-md-4
-                    img.img.m-3(src='/static/images/NerfWinners.png', alt='hacks_two')
+                    img.img.m-3(src='/static/images/NerfWinners.png', alt='Nerf War Winners')
