--- a/src/views/includes/navbar.pug
+++ b/src/views/includes/navbar.pug
@@ -1,4 +1,4 @@
-nav.navbar.navbar-expand-xl
+nav.navbar.navbar-expand-xl(aria-label='Navigation Bar')
     .container-fluid
 
         a.navbar-brand.text-white(href='/' aria-label='Home' tabindex='-1')
@@ -12,8 +12,6 @@ nav.navbar.navbar-expand-xl
             span.navbar-toggler-icon
 
         #navbarTogglerDemo01.collapse.navbar-collapse
-
-
 
             ul.navbar-nav.me-auto.mb-2.mb-lg-0
                 li.nav-item
